@@ -1,3 +1,7 @@
+2009-04-20  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* Project/CProject.cs: Track api changes in IExecutionHandler.
+
 2009-04-20  Mike Krüger  <mkrueger@novell.com>
 
 	* templates/ConsoleCProject.xpt.xml:
